--- a/src/cloudsc_pyiface/pyproject.toml
+++ b/src/cloudsc_pyiface/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools >= 64", "setuptools-scm"]
+requires = ["setuptools >= 64"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -19,6 +19,8 @@ classifiers = [
    " License :: OSI Approved:: Apache License, Version 2.0 ",
    " Natural Language :: English ",
    " Operating System :: POSIX ",
+   " Programming Language :: Python :: 3.8 ",
+   " Programming Language :: Python :: 3.9 ",
    " Programming Language :: Python :: 3.10 ",
    " Programming Language :: Python :: 3.11 ",
    " Topic :: Scientific/Engineering :: Atmospheric Science "
