PyIface - Fortran-Python bridging with CMake compilation (#38)
* Initial copy of the python driver files and settings to the dedicated branch

* Python calling of Fortran works in the develop branch

* add missing fortran part

* bundle build works for python driver

* Cleanup of the execution process

* Small cleanup. Verifies with activation of venv and setting LD_LIBRARY_PATH

* rpath passed to f2py to find .so libs automatically. Works on Mac, to be checked on Atos

* python packaging configs

* abstracting field_c_to_fortran

* abstracting field_fortran_to_c

* rearrangement of pyiface sources, validates on ATOS, python packaging still not working

* Mods to be able to perform pip install. Works with Python 3.11

* cmake improvements for the python driver to find its dependencies smoothly. Temporarily Python is a required package to build cloudsc

* pyproject.toml added, now builds correctly on ATOS

* First round of cmake cleanup

* Second batch of cmake cleanup. Added ctest entries

* Third batch of CMakelist improvements

* Add master compiler options to f2py invocation; diagnostics and comment removal

* Revert to explicit cloudsc loader in Python, not needed on Mac but needed on Atos. Add importlib to requirements for completeness

* Basic README added

* Fix to reenable CI in Github

* Remove locals from driver, add clic option

* encapsulation of parameters

* Expands almost work, except for 4D vars

* Calling expand works, but nlev has to be hardcoded in expand_r3, possibly to bug in f2py?

* Setting nproma works

* Setting ngptot works

* Cleanup using pylint, a few pylint complains remain, but wont be adressed

* Trying to make Python optional

* Try once again

* Try once again

* Try once again

* Try once again

* Try once again

* Turn off the build of Python interface for CI

* RC1 - works successfuly with nproma=32 on ATOS using GNU and Intel. Now to the last check on Mac

*

--- a/bundle.yml
+++ b/bundle.yml
@@ -114,6 +114,14 @@ options :
         help  : Build the new Fortran version of CLOUDSC [ON|OFF]
         cmake : ENABLE_CLOUDSC_FORTRAN={{value}}
 
+    - cloudsc-fortran-pyiface :
+        help  : Build the Python driver interfaced with the new Fortran version of CLOUDSC [ON|OFF]
+        cmake : ENABLE_CLOUDSC_FORTRAN_PYIFACE={{value}}
+
+    - cloudsc-fortran-pyiface-binary :
+        help  : Build the Fortran binary for the PYIFACE version [ON|OFF]
+        cmake : ENABLE_CLOUDSC_FORTRAN_PYIFACE_BINARY={{value}}
+
     - cloudsc-c :
         help  : Build the C version of CLOUDSC [ON|OFF]
         cmake : ENABLE_CLOUDSC_C={{value}}
