CLOUDSC-Python: Add bundle and CMake install options for cloudscf2py
This includes a virtualenv setup, installation via add_custom_command
depndency chain and a small ctest runner for the standalone Python
variant.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory(prototype1)
 add_subdirectory(common)
 add_subdirectory(cloudsc_fortran)
 add_subdirectory(cloudsc_pyiface)
+add_subdirectory(cloudsc_python)
 add_subdirectory(cloudsc_c)
 add_subdirectory(cloudsc_cuda)
 add_subdirectory(cloudsc_gpu)
