--- a/bundle.yml
+++ b/bundle.yml
@@ -106,6 +106,11 @@ options :
         help  : Frontend parser to use for Loki transformations
         cmake : LOKI_FRONTEND={{value}}
 
+    - with-python :
+        help  : Enable Python variants of CLOUDSC
+        cmake : >
+            CLOUDSC_PYTHON_F2PY=ON
+
     - cloudsc-prototype1 :
         help  : Build the original operational Fortran prototype [ON|OFF]
         cmake : ENABLE_CLOUDSC_PROTOTYPE1={{value}}
@@ -141,6 +146,10 @@ options :
     - cloudsc-loki-claw :
         help  : Build the deprecated Loki+CLAW-based GPU version CLOUDSC  [ON|OFF]
         cmake : ENABLE_CLOUDSC_LOKI_CLAW={{value}}
+
+    - cloudsc-python-f2py :
+        help  : Enable dedicated pure Python variant of CLOUDSC [ON|OFF]
+        cmake : ENABLE_CLOUDSC_PYTHON_F2PY={{value}}
 
     - hdf5 :
         help : Enable use of HDF5 input file [ON|OFF]
