--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    name: Test on ${{ matrix.arch }} ${{ matrix.io_library_flag }} ${{ matrix.mpi_flag }} ${{ matrix.prec_flag }} ${{ matrix.gpu_flag }} ${{ matrix.loki_flag }} ${{ matrix.claw_flag }} ${{ matrix.pyiface_flag }}
+    name: Test on ${{ matrix.arch }} ${{ matrix.io_library_flag }} ${{ matrix.mpi_flag }} ${{ matrix.prec_flag }} ${{ matrix.gpu_flag }} ${{ matrix.loki_flag }} ${{ matrix.claw_flag }} ${{ matrix.pyiface_flag }} ${{ matrix.python_flag }}
 
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
@@ -46,6 +46,8 @@ jobs:
 
         pyiface_flag: ['']  # Flag to enable Python-interface variant
 
+        python_flag: ['']  # Flag to enable Python variants
+
         include:
           # Add nvhpc build configurations with serialbox and HDF5
           - arch: github/ubuntu/nvhpc/21.9
@@ -56,6 +58,7 @@ jobs:
             cuda_flag: '--with-cuda'
             loki_flag: '--with-loki'
             pyiface_flag: ''
+            python_flag: ''
           - arch: github/ubuntu/nvhpc/21.9
             io_library_flag: '--with-serialbox'
             mpi_flag: ''
@@ -64,6 +67,7 @@ jobs:
             cuda_flag: '--with-cuda'
             loki_flag: '--with-loki'
             pyiface_flag: ''
+            python_flag: ''
           # Add pyiface build configuration for HDF5 only
           - arch: github/ubuntu/gnu/9.4.0
             io_library_flag: ''
@@ -73,6 +77,7 @@ jobs:
             cuda_flag: ''
             loki_flag: ''
             pyiface_flag: '--cloudsc-fortran-pyiface=ON'
+            python_flag: '--cloudsc-python-f2py=ON'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -118,7 +123,8 @@ jobs:
           ./cloudsc-bundle build --retry-verbose \
           --arch=arch/${{ matrix.arch }} ${{ matrix.prec_flag }} \
           ${{ matrix.mpi_flag }} ${{ matrix.io_library_flag }} ${{ matrix.gpu_flag }} \
-          ${{ matrix.claw_flag}} ${{ matrix.loki_flag }} ${{ matrix.cuda_flag }} ${{ matrix.pyiface_flag }}
+          ${{ matrix.claw_flag}} ${{ matrix.loki_flag }} ${{ matrix.cuda_flag }} \
+          ${{ matrix.pyiface_flag }} ${{ matrix.python_flag }}
 
       # Verify targets exist
       - name: Verify targets
@@ -130,6 +136,7 @@ jobs:
           loki_flag: ${{ matrix.loki_flag }}
           claw_flag: ${{ matrix.claw_flag }}
           pyiface_flag: ${{ matrix.pyiface_flag }}
+          python_flag: ${{ matrix.python_flag }}
         run: .github/scripts/verify-targets.sh
 
       # Run double-precision targets
