--- a/src/cloudsc_fortran/CMakeLists.txt
+++ b/src/cloudsc_fortran/CMakeLists.txt
@@ -21,11 +21,11 @@ if( HAVE_CLOUDSC_FORTRAN )
             dwarf_cloudsc.F90
             cloudsc_driver_mod.F90
             cloudsc.F90
-        LIBS
-            cloudsc-common-lib
         DEFINITIONS ${CLOUDSC_DEFINITIONS}
     )
 
+    target_link_libraries( dwarf-cloudsc-fortran PRIVATE cloudsc-common-lib )
+    
     # Create symlink for the input data
     if( HAVE_SERIALBOX )
       execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
@@ -33,6 +33,8 @@ if( HAVE_CLOUDSC_FORTRAN )
     endif()
 
     if( HAVE_HDF5 )
+      target_include_directories( dwarf-cloudsc-fortran PRIVATE ${HDF5_Fortran_INCLUDE_DIRS} )
+      target_link_libraries( dwarf-cloudsc-fortran PRIVATE ${HDF5_LIBRARIES} )
       execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
           ${CMAKE_CURRENT_SOURCE_DIR}/../../config-files/input.h5 ${CMAKE_CURRENT_BINARY_DIR}/../../../input.h5 )
       execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
