Choose pgf90 for HDF5 build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -148,7 +148,9 @@ jobs:
 
       - name: Install HDF5 from source
         if: contains( matrix.arch, 'nvhpc' ) && ! contains( matrix.io_library_flag, 'with-serialbox' )
-        run: source arch/${{ matrix.arch }}/env.sh && .github/scripts/install-hdf5.sh
+        run: |
+          source arch/${{ matrix.arch }}/env.sh
+          FC=pgf90 .github/scripts/install-hdf5.sh
 
       # Install Boost
       - name: Install Boost libraries
