--- a/bundle.yml
+++ b/bundle.yml
@@ -5,11 +5,15 @@ name    : cloudsc-bundle
 version : 1.0.0-develop
 cmake : >
         CMAKE_LINK_DEPENDS_NO_SHARED=ON
+        BUILD_field_api=OFF
+        BUILD_eckit=OFF
+        BUILD_fckit=OFF
+        BUILD_atlas=OFF
 
 projects :
 
     - ecbuild :
-        git     : https://github.com/ecmwf/ecbuild 
+        git     : https://github.com/ecmwf/ecbuild
         version : 3.7.0
         bundle  : false
 
@@ -36,13 +40,37 @@ projects :
             LOKI_ENABLE_TESTS=OFF
             LOKI_ENABLE_NO_INSTALL=ON
 
+    - eckit :
+        git     : https://github.com/ecmwf/eckit
+        version : 1.24.3
+        optional: true
+        require : ecbuild
+        cmake   : >
+            ECKIT_ENABLE_TESTS=OFF
+            ECKIT_ENABLE_BUILD_TOOLS=OFF
+
+    - fckit :
+        git     : https://github.com/ecmwf/fckit
+        version : 0.9.0
+        optional: true
+        require : ecbuild eckit
+        cmake   : >
+            FCKIT_ENABLE_TESTS=OFF
+
+    - atlas :
+        git     : https://github.com/ecmwf/atlas
+        version : master
+        optional: true
+        require : ecbuild eckit fckit
+        cmake   : >
+            ATLAS_ENABLE_TESTS=OFF
+
     - field_api :
         git     : ${BITBUCKET}/rdx/field_api
         version : master
         optional: true
         require : ecbuild
         cmake   : >
-            BUILD_field_api=OFF
             ENABLE_FIELD_API_TESTS=OFF
             ENABLE_FIELD_API_FIAT_BUILD=OFF
             FIELD_API_UTIL_MODULE_PATH=${CMAKE_SOURCE_DIR}/cloudsc-dwarf/src/common/module
@@ -110,6 +138,21 @@ options :
         help  : Enable Python variants of CLOUDSC
         cmake : >
             CLOUDSC_PYTHON_F2PY=ON
+
+    - with-atlas :
+        help  : Build Atlas and its dependencies (eckit, fckit) and enable Atlas-based variants of CLOUDSC
+        cmake : >
+            BUILD_eckit=ON
+            BUILD_fckit=ON
+            BUILD_atlas=ON
+
+    - with-dependency-tests :
+        help  : Build and enable tests for CLOUDSC dependencies that are build as part of the bundle (eckit, fckit, Atlas, Loki)
+        cmake : >
+            LOKI_ENABLE_TESTS=ON
+            ECKIT_ENABLE_TESTS=ON
+            FCKIT_ENABLE_TESTS=ON
+            ATLAS_ENABLE_TESTS=ON
 
     - cloudsc-prototype1 :
         help  : Build the original operational Fortran prototype [ON|OFF]
