--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    name: Test on ${{ matrix.arch }} ${{ matrix.io_library_flag }} ${{ matrix.mpi_flag }} ${{ matrix.prec_flag }} ${{ matrix.gpu_flag }} ${{ matrix.loki_flag }} ${{ matrix.claw_flag }} ${{ matrix.pyiface_flag }} ${{ matrix.python_f2py_flag }}
+    name: Test on ${{ matrix.arch }} ${{ matrix.io_library_flag }} ${{ matrix.prec_flag }} ${{ matrix.build_flags }}
 
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
@@ -27,85 +27,54 @@ jobs:
 
       matrix:
 
-        arch:
-          - github/ubuntu/gnu/9.4.0
+        arch: ['gnu/9.4.0']  # Default arch on Github is GNU 9.4.0 for now
 
         io_library_flag: ['', '--with-serialbox']  # Switch between Serialbox and HDF5
 
-        mpi_flag: ['', '--with-mpi']  # Enable MPI-parallel build
-
         prec_flag: ['', '--single-precision']  # Switch single/double precision
 
-        gpu_flag: ['', '--with-gpu']  # GPU-variants enabled
+        build_flags:
+          - ''  # Plain build without any options
+          - '--with-gpu --with-loki' # Enable Loki and GPU variants
+          - '--with-gpu --with-loki --with-mpi' # Enable Loki and GPU variants with MPI
 
-        cuda_flag: ['']  # Enable CUDA variants
+        pyiface_flag: ['']  # Enable the pyiface variant
 
-        loki_flag: ['', '--with-loki']  # Loki source-to-source translation enabled
+        python_f2py_flag: ['']  # Enable the f2py variant
 
-        claw_flag: ['']  # Flag to enable CLAW-generated variants
-
-        pyiface_flag: ['']  # Flag to enable Python-interface variant
-
-        python_f2py_flag: ['']  # Flag to enable Python variants
+        claw_flag: ['']
 
         ctest_exclude_pattern: ['-scc-hoist-']  # Regex to disable CTest tests
 
         include:
+          # Add pyiface build configuration for double precision, non-MPI, HDF5 only
+          - arch: gnu/9.4.0
+            io_library_flag: ''
+            prec_flag: ''
+            build_flags: '--cloudsc-fortran-pyiface=ON --cloudsc-python-f2py=ON'
+
           # Add nvhpc build configurations with serialbox and HDF5
-          - arch: github/ubuntu/nvhpc/21.9
+          - arch: nvhpc/21.9
             nvhpc_version: 21.9
             io_library_flag: ''
-            mpi_flag: ''
-            prec_flag: ''
-            gpu_flag: '--with-gpu'
-            cuda_flag: '--with-cuda'
-            loki_flag: '--with-loki'
-            pyiface_flag: ''
-            python_f2py_flag: ''
+            build_flags: '--with-gpu --with-loki --with-cuda'
             ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-cuda-'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
-          - arch: github/ubuntu/nvhpc/21.9
+          - arch: nvhpc/21.9
             nvhpc_version: 21.9
             io_library_flag: '--with-serialbox'
-            mpi_flag: ''
-            prec_flag: ''
-            gpu_flag: '--with-gpu'
-            cuda_flag: '--with-cuda'
-            loki_flag: '--with-loki'
-            pyiface_flag: ''
-            python_f2py_flag: ''
+            build_flags: '--with-gpu --with-loki --with-cuda'
             ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-cuda-'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
-          - arch: github/ubuntu/nvhpc/23.5
+
+          - arch: nvhpc/23.5
             nvhpc_version: 23.5
             io_library_flag: ''
-            mpi_flag: ''
-            prec_flag: ''
-            gpu_flag: '--with-gpu'
-            cuda_flag: '--with-cuda'
-            loki_flag: '--with-loki'
-            pyiface_flag: ''
-            python_f2py_flag: ''
+            build_flags: '--with-gpu --with-loki --with-cuda'
             ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-loki-sca|-cuda-'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
-          - arch: github/ubuntu/nvhpc/23.5
+          - arch: nvhpc/23.5
             nvhpc_version: 23.5
             io_library_flag: '--with-serialbox'
-            mpi_flag: ''
-            prec_flag: ''
-            gpu_flag: '--with-gpu'
-            cuda_flag: '--with-cuda'
-            loki_flag: '--with-loki'
-            pyiface_flag: ''
-            python_f2py_flag: ''
+            build_flags: '--with-gpu --with-loki --with-cuda'
             ctest_exclude_pattern: '-gpu-|-scc-|-loki-c|-loki-sca|-cuda-'  # GPU variants don't work on CPU runners, loki-c variant causes SIGFPE
-          # Add pyiface build configuration for HDF5 only
-          - arch: github/ubuntu/gnu/9.4.0
-            io_library_flag: ''
-            mpi_flag: ''
-            prec_flag: ''
-            gpu_flag: ''
-            cuda_flag: ''
-            loki_flag: ''
-            pyiface_flag: '--cloudsc-fortran-pyiface=ON'
-            python_f2py_flag: '--cloudsc-python-f2py=ON'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -119,7 +88,7 @@ jobs:
 
       # Install MPI
       - name: Install MPI via Apt
-        if: contains( matrix.mpi_flag, 'with-mpi' )
+        if: contains( matrix.build_flags, 'with-mpi' )
         run: sudo apt-get install libopenmpi-dev
 
       # Free up disk space for nvhpc
@@ -155,7 +124,7 @@ jobs:
       - name: Install HDF5 from source
         if: contains( matrix.arch, 'nvhpc' ) && ! contains( matrix.io_library_flag, 'with-serialbox' )
         run: |
-          source arch/${{ matrix.arch }}/env.sh
+          source arch/github/ubuntu/${{ matrix.arch }}/env.sh
           FC=pgf90 .github/scripts/install-hdf5.sh
 
       # Install Boost
@@ -171,22 +140,15 @@ jobs:
       - name: Bundle build
         run: |
           ./cloudsc-bundle build --retry-verbose \
-          --arch=arch/${{ matrix.arch }} ${{ matrix.prec_flag }} \
-          ${{ matrix.mpi_flag }} ${{ matrix.io_library_flag }} ${{ matrix.gpu_flag }} \
-          ${{ matrix.claw_flag}} ${{ matrix.loki_flag }} ${{ matrix.cuda_flag }} \
-          ${{ matrix.pyiface_flag }} ${{ matrix.python_f2py_flag }}
+          --arch=arch/github/ubuntu/${{ matrix.arch }} \
+          ${{ matrix.prec_flag }} ${{ matrix.io_library_flag }} ${{ matrix.build_flags }}
 
       # Verify targets exist
       - name: Verify targets
         env:
           io_library_flag: ${{ matrix.io_library_flag }}
           prec_flag: ${{ matrix.prec_flag }}
-          gpu_flag: ${{ matrix.gpu_flag }}
-          cuda_flag: ${{ matrix.cuda_flag }}
-          loki_flag: ${{ matrix.loki_flag }}
-          claw_flag: ${{ matrix.claw_flag }}
-          pyiface_flag: ${{ matrix.pyiface_flag }}
-          python_f2py_flag: ${{ matrix.python_f2py_flag }}
+          build_flags: ${{ matrix.build_flags }}
         run: .github/scripts/verify-targets.sh
 
       # Run ctest
